Refactor June: performance optimizations, clean exception propagation, DRY/YAGNI cleanups, and documentation updates